# rabbitmq_workspace

./: .gitignore  Cargo.toml  README.md  WORKSPACE_TODO.txt  bestinf.sh  bestinf.txt  capture.txt  clean_all.sh  clippy.txt  debug_dump_20251128_204825.txt  debug_dump_20251128_205208.txt  dwt.sh  find_rust_files.sh  git_status.txt  load_pagila.sh  rabbitmq-mon.toml  rsfind.sh  run_monitor.sh  summary.md  traverse_projects.sh  tree.txt  verify_pagila.sh
Gemini/: 20251124T184933.txt  friend.txt
artifacts/: Gemini20251128.txt  Gemini20251129.txt  Gemini20251130.txt  Gemini20251201.txt  Gemini20251202.txt  Gemini20251203.txt  Gemini20251204.txt  README.md  message_types.json  package.json  rabbit_fedora_2025-5-23.json  rabbitmq_config.json
egui-components/: Cargo.toml  README.md
egui-components/src/: border_layout.rs  event_tree.rs  lib.rs  tree.rs  tree_node_id.rs
egui-components/src/tree_vis/: mod.rs  topology.rs
message-player/: Cargo.toml
message-player/src/: main.rs
messaging_cli/: Cargo.toml
messaging_cli/src/: main.rs
messaging_commands/: Cargo.toml  README.md  msgcmd.txt
messaging_commands/src/: error.rs  lib.rs  main.rs  traits.rs
messaging_commands/src/client/: mod.rs
messaging_commands/src/clients/: amqp.rs
messaging_commands/src/tests/: mod.rs
messaging_simple/: Cargo.toml
messaging_simple/src/: main.rs
messaging_tests/: Cargo.toml  run_all_tests.sh
messaging_tests/scripts/: test_order_placement.sh  test_priority_queues.sh  test_user_creation.sh
net-scripts/scripts/: Google Gemini.html  discover_hosts.sh  exports.sh  sambaSetup.txt
old-rabbitmq-ui/: Cargo.toml
old-rabbitmq-ui/src/: app.rs  main.rs
pg_vault/: Cargo.toml  check_psql.sh  justpost.sh
pg_vault/src/: lib.rs  main.rs  utils.rs
pg_vault/src/auth/: mock.rs  mod.rs  yubikey.rs
pg_vault/src/vault/: connection.rs  mod.rs  secure_connection.rs
pg_vault/tests/: auth_helpers.rs
rabbitmq-config/: Cargo.toml  README.md  config.tree
rabbitmq-config/src/: client.rs  config.rs  error.rs  lib.rs  models.rs  topology.rs
rabbitmq-config/tests/: connection_test.rs  lib.rs  simple_connection_test.rs
rabbitmq-config/tests/client/: integration_tests.rs  mocked_tests.rs  unit_tests.rs
rabbitmq-config/tests/common/: test_utils.rs
rabbitmq-config/tests/config/: rabbitmq_def_tests.rs  serialization_tests.rs  validation_tests.rs
rabbitmq-info/: Cargo.toml
rabbitmq-info/src/: api.rs  lib.rs
rabbitmq-info/src/api/: mod.rs
rabbitmq-info/src/collector/: mod.rs
rabbitmq-info/src/export/: mod.rs
rabbitmq-mon/: Cargo.toml
rabbitmq-mon/src/: main.rs
rabbitmq-tools/: Cargo.toml
rabbitmq-ui/: Cargo.toml
rabbitmq-ui/src/: app.rs  main.rs
tests/: integration_test.rs  lib.rs
tests/client/: unit_tests.rs
yak_json/: Cargo.toml  test.json
yak_json/src/: main.rs
