[workspace]
members = [
    "rabbitmq-config",
    "rabbitmq-info",
    "rabbitmq-ui",
    "egui-components",
    "messaging_commands", "messaging_cli"]

resolver = "2"


[workspace.dependencies]
rabbitmq-config = { path = "./rabbitmq-config" }
rabbitmq-info = { path = "./rabbitmq-info" }
tokio = { version = "1", features = ["full", "rt", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
