[workspace]
members = [
    "egui-components",
    "messaging_cli", 
    "messaging_commands",
    "messaging_simple",    # Add this line
    "pg_vault",
    "rabbitmq-config",
    "rabbitmq-info", "rabbitmq-mon", 
    "rabbitmq-ui",
    "yak_json"
]

resolver = "2"


[workspace.dependencies]
async-trait = "0.1.80"
base64 = "0.21.7"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive", "env"] }
eframe = { version = "0.27.2", default-features = false, features = ["accesskit", "default_fonts", "glow", "persistence"] }
egui = "0.27.2"
env_logger = "0.11.3"
lapin = "2.5.3" # Standardizing on the newer version
log = "0.4.21"
messaging_commands = { path = "./messaging_commands" }
percent-encoding = "2.3.1"
rabbitmq-config = { path = "./rabbitmq-config" }
rabbitmq-info = { path = "./rabbitmq-info" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.8"
thiserror = "1.0"
tokio = { version = "1.38.0", features = ["full"] }
tokio-postgres = "0.7.10"
tokio-test = "0.4.4"
yubikey = "0.7.0" # Switched from yubico to yubikey for PIV support
