#### egui-components/Cargo.toml
[package]
name = "egui-components"
version = "0.1.0"
edition = "2021"

[dependencies]
# Use a direct reference to eframe with version instead of workspace
eframe = "0.24.1"
env_logger = "0.11.8"
tokio = "1.45.0"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "1.0.69"
serde_json = "1.0.140"
futures-util = "0.3.31"

