#### egui-components/Cargo.toml
[package]
name = "egui-components"
version = "0.1.0"
edition = "2021"

[dependencies]
# Inherit versions from the root Cargo.toml
egui = { workspace = true }
eframe = { workspace = true }
env_logger = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
