[package]
name = "message-player"
version = "0.1.0"
edition = "2021"

[dependencies]
rabbitmq-config = { path = "../rabbitmq-config" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11.3"
ratatui = { version = "0.28.0", features = ["all-widgets"] }
crossterm = "0.27.0"
chrono = "0.4"
futures-util = "0.3"
tokio-sync = "0.1.1"
thiserror = "1.0"
anyhow = "1.0"
tui-textarea = "0.4.0"
