[package]
name = "messaging_commands"
version = "0.1.0"
edition = "2021"

[dependencies]
rabbitmq-config = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
clap = { workspace = true, optional = true } # Optional for the library

env_logger = { workspace = true, optional = true } # Optional for the library
chrono = { workspace = true, features = ["serde"], optional = true } # Optional for the library

lapin = { workspace = true }
percent-encoding = { workspace = true }
async-trait = { workspace = true }

[features]
default = []
cli = ["dep:clap", "dep:env_logger", "dep:chrono"]

[[bin]]
name = "messaging_commands"
required-features = ["cli"]