[package]
name = "pg_vault"
version = "0.1.0"
edition = "2021" # Using the current stable edition to avoid toolchain issues

[[bin]]
name = "pg_vault"
path = "src/main.rs"

[dependencies]
messaging_commands = { workspace = true }
rabbitmq-config = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio-postgres = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }


# Hardware Yubikey support (optional)
yubikey = { workspace = true, optional = true }

[features]
default = []
hardware-yubikey = ["dep:yubikey"]

[dev-dependencies]
tokio-test = { workspace = true }