## rabbitmq-config/Cargo.toml

[package]
name = "rabbitmq-config"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio-executor-trait = "2.1.1"

serde_json = "1.0"

tokio = { version = "1", features = ["full"] }
lapin = "2.5.3"
thiserror = "1.0"
futures-util = "0.3.31"
# Use version 7.2.3 which is compatible with lapin 2.5.3
amq-protocol-uri = "7.2.3"
percent-encoding = "2.3.1"
log = "0.4.27"



