## rabbitmq-config/Cargo.toml

[package]
name = "rabbitmq-config"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio-executor-trait = "2.1.1"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
lapin = "2.5.3"
thiserror = "1.0"
futures-util = "0.3.31"
amq-protocol-uri = "7.2.3"
percent-encoding = "2.3.1"
log = "0.4.27"
sha2 = "0.10.9"
rand = "0.8.5"
base64 = "0.21.5"
toml = "0.8"
dirs = "5.0"
rpassword = "7.3"
env_logger = "0.11.3"
chrono = "0.4"
