## rabbitmq-info/Cargo.toml
[package]
name = "rabbitmq-info"
version = "0.1.0"
edition = "2021"

[dependencies]
rabbitmq-config = { path = "../rabbitmq-config" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full", "rt", "macros"] }
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.21"