[package]
name = "rabbitmq-mon"
version = "0.1.0"
edition = "2021"

[dependencies]
# TUI framework
ratatui = "0.28"
crossterm = "0.28"

# Async runtime and utilities
tokio = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }

# Workspace crates
rabbitmq-info = { workspace = true }
rabbitmq-config = { workspace = true }

# Additional dependencies
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# keyring is being removed
clap = { version = "4.5", features = ["derive"] }
rpassword = "7.3"
