[package]
name = "rabbitmq-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.27.2"
tokio = { version = "1", features = ["full"] }
rabbitmq-config = { path = "../rabbitmq-config" }
rabbitmq-info = { path = "../rabbitmq-info" }
env_logger = "0.11.3"
egui_extras = "0.27.2"
serde_json = "1.0"
lapin = "2.5.3"
egui-components = { path = "../egui-components" }
