
[package]
name = "yak_json"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
eframe = "0.24.1"
egui-components = { path = "../egui-components" }
env_logger = "0.11.8"
log = "0.4"
rabbitmq-config = { workspace = true }
rfd = { version = "0.14" }  # Simple file dialog

